// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`license_with_flow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* Copyright example */
/* @flow */

("": void); // error

=====================================output=====================================
/* Copyright example */
/* @flow */

("": void); // error

================================================================================
`;

exports[`max_header_tokens.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
/* second token */
/* third token */
/**
 * After max_header_tokens (in .flowconfig), we no longer care:
 *
 * @flow
 */

=====================================output=====================================
/* @flow */
/* second token */
/* third token */
/**
 * After max_header_tokens (in .flowconfig), we no longer care:
 *
 * @flow
 */

================================================================================
`;

exports[`multiple_flows_1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
/* @flow */

=====================================output=====================================
/* @flow */
/* @flow */

================================================================================
`;

exports[`multiple_flows_2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 * @noflow
 */

=====================================output=====================================
/**
 * @flow
 * @noflow
 */

================================================================================
`;

exports[`multiple_providesModule_1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule Foo
 * @providesModule Bar
 * @flow
 */

=====================================output=====================================
/**
 * @providesModule Foo
 * @providesModule Bar
 * @flow
 */

================================================================================
`;

exports[`multiple_providesModule_2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule Foo
 * @flow
 */
/**
 * @providesModule Bar
 */

=====================================output=====================================
/**
 * @providesModule Foo
 * @flow
 */
/**
 * @providesModule Bar
 */

================================================================================
`;

exports[`use_strict_with_flow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"use strict";
/* @flow */

("": void); // error

=====================================output=====================================
"use strict";
/* @flow */

("": void); // error

================================================================================
`;

exports[`with_flow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

("": void); // error

=====================================output=====================================
/* @flow */

("": void); // error

================================================================================
`;

exports[`without_flow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* some other comment */

("": void); // no error

=====================================output=====================================
/* some other comment */

("": void); // no error

================================================================================
`;
